--- a/content/articles/breaking-down-my-recent-open-source-contribution.mdx
+++ b/content/articles/breaking-down-my-recent-open-source-contribution.mdx
@@ -1,22 +1,20 @@
 ---
-title: "The Anatomy of an Open Source Contribution"
-publishedAt: "2024-5-20"
+title: "Breaking down my recent Open Source Contribution"
+publishedAt: "2024-5-28"
 description: "Discussing my recent open source cntirbution to the RXDB library"
 tags: ["rxdb", "react", "graphql", "opensource"]
 articleType: "article"
-og: "https://ucarecdn.com/2cf34f69-bcf8-4344-9bd2-4d38de6597f8/yesiwouldusereduxin2024.png"
+og: "https://ucarecdn.com/fac05641-0ca1-4d21-9c75-f4e7e719d9d2/breakingdownmyrecentopensourcecontribution.png"
 status: "draft"
 ---
 
 I recently landed a PR in [RxDB](https://github.com/pubkey/rxdb), a fairly large open-source repo. I would like to discuss the issue that my PR addressed, how I came across it, and the entire contribution process.
 
-RxDB, if you're unfamiliar, is an offline, local-first, client-side database. It works by persisting data locally on the client side using a number of storage options and replicating the data to the server in the background. RxDB offers several options to facilitate this replication, one of which is GraphQL - the option I used in my app.
+RxDB, if you're unfamiliar, is a local-first, client-side database. It works by persisting data locally on the client side using a number of storage options and replicating the data to the server in the background. RxDB offers several options to facilitate this replication, one of which is GraphQL - the option I used in my app.
 
 ## The Problem
 
-To understand the issue I encountered while working with RxDB, I'll need to give a brief overview of GraphQL.
-
-GraphQL is a query language that allows us to specify in granular detail the exact data we need from our server. It all starts with a schema which describes our data and the operations we intend to perform on it:
+To understand the issue I encountered while working with RxDB, I'll need to give a brief overview of GraphQL. GraphQL is a query language that allows us to specify in granular detail the exact data we need from our server. It all starts with a schema which describes the shape of the data and the operations we intend to perform on it:
 
 ```graphql
 type User {
@@ -47,7 +45,7 @@ type Mutation {
 }
 ```
 
-Based on this schema, a client can use a GraphQL query to request data or trigger a mutation. On the server, these queries are validated and executed by resolvers. For example, a query to retrieve `allTodos` would look as like:
+Based on this schema, a client can use a GraphQL query to request data or trigger a mutation. On the server, these queries are validated and executed by resolvers. For example, a query to retrieve `allTodos` would look like:
 
 ```graphql
 query AllTodos {
@@ -87,11 +85,9 @@ And the resulting JSON data would look like:
 }
 ```
 
-The key point to remember is that GraphQL queries can support deeply nested structures, as seen in the above example where user is nested within todos.
+The key thing to note here is that GraphQL queries can support deeply nested structures, as seen in the above example where `user` is nested within `todos`. The server's resolver is responsible for resolving a field and all its child properties based on the GraphQL query.
 
-The server's resolver is responsible for 'resolving' a field and all its child properties based on the GraphQL query. Importantly, when a field is nested in a query, we need to specify the individual properties in which we're interested.
-
-So a query like this to get all the sub-fields in the user field will throw a `GraphQLError` error:
+Importantly, when a field is nested in a query, we need to specify the individual properties in which we're interested. So a query to get all the sub-fields in the `user` field will throw a `GraphQLError` error:
 
 ```graphql
 query AllTodos {
@@ -109,7 +105,7 @@ We will be coming back to this later.
 
 Replication in RxDB operates through a push, pull, and streaming mechanism. You can read more about how that works [here](https://rxdb.info/replication.html). To replicate our changes with GraphQL, we need to create push and pull queries. We then pass these queries to the `replicateGraphQL` function provided by RxDB.
 
-RxDB provides a number utility functions, such as `pullQueryBuilderFromRxSchema`, which automatically generates the necessary GraphQL queries from the RxDB database schema. This schema adheres to the [JSON Schema](http://json-schema.org/) standard:
+RxDB provides a number utility functions, such as `pullQueryBuilderFromRxSchema`, which automatically generates the necessary GraphQL queries from the RxDB database schema:
 
 ```javascript
 const RXSchema = {
@@ -155,6 +151,12 @@ const RXSchema = {
 const pullQuery = pullQueryBuilderFromRxSchema(RXSchema);
 ```
 
+When i tried to use the `pullQueryBuilderFromRxSchema` function, I ran into an error:
+
+```javascript
+GraphQLError: Field \"address\" of type \"HumanModel\" must have a selection of subfields.
+```
+
 After logging the return of the `pullQueryBuilderFromRxSchema` function, this is what I got in the query field:
 
 ```graphql
@@ -177,11 +179,9 @@ query PullHuman($checkpoint: HumanInputCheckpoint, $limit: Int!) {
 }
 ```
 
-If you notice, the generated schema does not match our `RXschema` - specifically, the `pullHuman` query does not include the subfields for the address, hence the error.
+If you notice, the generated schema does not match our `RXschema` - specifically, the `pullHuman` query does not include the subfields for the address, hence the error. GraphQL requires that you construct your queries in a way that only returns concrete data. Each field must ultimately resolve to one or more fields.
 
-GraphQL requires that you construct your queries in a way that only returns concrete data. Each field must ultimately resolve to one or more fields.
-
-Searching the RxDB repo, we can identify the issue in the [source](https://github.com/pubkey/rxdb/blob/4516a6873b5e01dcae35cf4ace97837c927b64a6/src/plugins/replication-graphql/query-builder-from-rx-schema.ts) of the `pullQueryBuilderFromRxSchema`:
+Searching the RxDB repo (at the time), we can identify the issue in the [source](https://github.com/pubkey/rxdb/blob/4516a6873b5e01dcae35cf4ace97837c927b64a6/src/plugins/replication-graphql/query-builder-from-rx-schema.ts) of the `pullQueryBuilderFromRxSchema`:
 
 ```graphql
 export function pullQueryBuilderFromRxSchema(
@@ -220,17 +220,15 @@ export function pullQueryBuilderFromRxSchema(
 
 ```
 
-The issue lies with `outputFields`, which only considers the top-level keys of schema.properties. This explains why I was encountering a problem.
+The issue lies with the `outputFields` variable, which only considers the top-level keys of `schema.properties`. This explains why I was encountering a problem.
 
 ## Making the contribution
 
 The issue seemed relatively straightforward to fix. It didn't involve the core database code and was isolated enough for me to understand without knowing the larger codebase.
 
-This is not typically the case for open source projects, where you usually need to spend some time understanding the codebase to make a contribution.
-
 Following the [instructions](https://rxdb.info/contribution.html), I opened an [issue](https://github.com/pubkey/rxdb/issues/5969) and submitted a failing test PR to illustrate the problem [here](https://github.com/pubkey/rxdb/pull/5968). After receiving feedback from the contributor, I opened a [PR](https://github.com/pubkey/rxdb/pull/5976) which was merged a few days later.
 
-The solution involved using recursion to recursively process the output fields based on the schema. Here's the core function I added:
+The solution involved using recursion to recursively process the output fields based on the schema. Here's the core function I added o do that:
 
 ```tsx
 type GenerateGQLOutputFieldsOptions = {
@@ -278,9 +276,9 @@ I rarely use recursion in my day job, so it was nice to see a clear use case her
 
 ## Learnings
 
-This PR marks my most significant contribution to a relatively large open-source project, and I'm pleased with the outcome.
+This PR is my biggest contribution to a major open-source project, and I'm quite pleased with the results. Mitchell's blog post on **[Contributing to Complex Projects](https://mitchellh.com/writing/contributing-to-complex-projects#step-3-learn-the-hot-path-internals)** served as a helpful guide in this entire process.
 
-Mitchell's blog post on **[Contributing to Complex Projects](https://mitchellh.com/writing/contributing-to-complex-projects#step-3-learn-the-hot-path-internals)** served as a helpful guide. I believe the key to my effective contribution was that I was interfacing as an RxDb user, addressing an issue that I encountered. This placed me in an optimal position to resolve the problem effectively.
+My key takeaway is that it's easier to contribute to open-source when you are solving an issue you encountered while using the library. Since I understood the bug I fixed, I was in the best position to implement a fix. However, this may not always be the case.
 
 I hope you enjoyed this walkthrough of the contribution. I'm interested in hearing your thoughts and feedback.
 
