feat: publish article
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/articles/breaking-down-my-recent-open-source-contribution.mdx
+++ b/content/articles/breaking-down-my-recent-open-source-contribution.mdx
@@ -5,7 +5,7 @@ description: "Discussing my recent open source cntirbution to the RXDB library"
 tags: ["rxdb", "react", "graphql", "opensource"]
 articleType: "article"
 og: "https://ucarecdn.com/fac05641-0ca1-4d21-9c75-f4e7e719d9d2/breakingdownmyrecentopensourcecontribution.png"
-status: "draft"
+status: "published"
 ---
 
 I recently landed a PR in [RxDB](https://github.com/pubkey/rxdb), a fairly large open-source repo. I would like to discuss the issue that my PR addressed, how I came across it, and the entire contribution process.
