feat: update copy
Signed-off-by: Kolade Afode <87288429+KXLAA@users.noreply.github.com>

--- a/content/articles/building-a-local-first-app-is-so-fun.mdx
+++ b/content/articles/building-a-local-first-app-is-so-fun.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Building a Local-first App is so fun"
 publishedAt: "2025-1-06"
-description: "Brain dump on my recent experience building a local first app for macOS"
+description: "Brain dump on recent experience building Cratebase a local macOS app"
 tags: ["mobx", "react", "local first", "sqlite"]
 articleType: "article"
 og: "https://ucarecdn.com/f74b1aeb-0f64-422f-bd22-99ffced26c9f/buildingalocalfirstappissofun.png"
