--- a/content/articles/building-a-local-first-app-is-so-fun.mdx
+++ b/content/articles/building-a-local-first-app-is-so-fun.mdx
@@ -18,8 +18,8 @@ Building Cratebase without having to think about the network has been a joy. Whe
 
 - How to manage loading and error states
 - How to handle caching and stale server data
-- How to synchronize server data with client memory
-- How to deal with network latency and request speeds
+- How to synchronize server state with client state
+- How to deal with network latency
 
 All these issues disappear when your data is stored locally—a huge amount of complexity simply vanishes.
 
