--- a/content/articles/building-a-local-first-app-is-so-fun.mdx
+++ b/content/articles/building-a-local-first-app-is-so-fun.mdx
@@ -56,6 +56,6 @@ Not having to deal with the network has made working on Cratebase both fun and s
 
 I can focus entirely on the core features of the app and ship faster. That's why I'm excited about new services like [Zero](https://zero.rocicorp.dev/), [Electric SQL](https://electric-sql.com/) & [LiveStore](https://github.com/livestorejs), which bring all the benefits of local-first apps to web apps—really exciting times ahead.
 
-If you're a DJ, check out Cratebase. I'll be writing much more about what I learned while building the app and working with Electron in general.
+If you're a DJ, check out [Cratebase](https://www.cratebase.app/). I'll be writing much more about what I learned while building the app and working with Electron in general.
 
 Until next time.
