--- a/content/articles/building-a-local-first-app-is-so-fun.mdx
+++ b/content/articles/building-a-local-first-app-is-so-fun.mdx
@@ -52,7 +52,7 @@ This example loads a database with over 3,500 tracks. On my M1 Max MacBook Pro i
 After this first load, MobX takes over and handles all state changes synchronously. This means there are virtually no delays when users perform actions like updates, deletions, or creations—no waiting for server requests to complete.
 
 
-Not having to deal with the network has made working on Cratebase both fun and straightforward. Also, since Cratebase is a desktop app, I don't have to worry about the complex & convoluted challenges I'd face with a web app—things like React Server Components, hydration, and bundle sizes.
+Not having to deal with the network has made working on Cratebase both fun and straightforward. Plus, since Cratebase is a desktop app, I don't have to worry about the complex & convoluted challenges I'd face with a web app—things like React Server Components, hydration, and bundle sizes.
 
 I can focus entirely on the core features of the app and ship faster. That's why I'm excited about new services like [Zero](https://zero.rocicorp.dev/), [Electric SQL](https://electric-sql.com/) & [LiveStore](https://github.com/livestorejs), which bring all the benefits of local-first apps to web apps—really exciting times ahead.
 
