--- a/content/articles/a-frontend-engineer-tries-java.mdx
+++ b/content/articles/a-frontend-engineer-tries-java.mdx
@@ -28,7 +28,7 @@ This is more ergonomic than TypeScript, where you first have to define all possi
 ### Records
 Before reading this book, I mainly knew Java for being verbose and requiring lots of boilerplate code. While I somewhat understand this sentiment, I think records are a really cool concept that helps reduce this verbosity. My mental model of records right now is just a lightweight class for data that can be serialized—though I know they can be more powerful, I basically see records as being similar to plain JavaScript objects.
 
-## Things i do no like
+## Things i do not like
 
 ### Type before value
 I am not a fan of how Java requires type declarations before variable names.
