fix: more tidying
Signed-off-by: Kolade Afode <87288429+KXLAA@users.noreply.github.com>

--- a/content/articles/building-a-local-first-app-is-so-fun.mdx
+++ b/content/articles/building-a-local-first-app-is-so-fun.mdx
@@ -8,7 +8,7 @@ og: "https://ucarecdn.com/f74b1aeb-0f64-422f-bd22-99ffced26c9f/buildingalocalfir
 status: "published"
 ---
 
-Over the last 6 months I have been working on a macOS app called [Cratebase](https://www.cratebase.app/). In short, the app provides tools to help DJs and music collectors better manage their music libraries.
+Over the last 6 months I have been working on a macOS app called [Cratebase](https://www.cratebase.app/). In short, the app provides tools to help music collectors better manage their music libraries.
 
 The app is built with Electron & React, and—most importantly—it's fully local. Cratebase runs directly on the user's computer, reading and writing files on their disk. The app handles local music files and stores all supporting data in an SQLite database on the user's machine.
 
