--- a/content/articles/the-right-level-of-abstraction.mdx
+++ b/content/articles/the-right-level-of-abstraction.mdx
@@ -5,7 +5,7 @@ description: "Musings about a conversion about abstractions i had with my manage
 tags: ["openapi", "software engineering", "code generation"]
 articleType: "article"
 og: "https://ucarecdn.com/bf6c10bd-966d-495b-85f5-53c2438cb496/therightlevelofabtraction.png"
-status: "draft"
+status: "published"
 ---
 
 
