--- a/content/articles/cratebase-devlog-trying-out-content-driven-development.mdx
+++ b/content/articles/cratebase-devlog-trying-out-content-driven-development.mdx
@@ -72,35 +72,42 @@ There is a cleanup option in the context menu that allows users to pick how they
 
 ### Quick Filters
 I have a filter button on top of the tracklist — this allows users to add quick  filters to the tracklist bases on track fields like duration, genre & artist. 
-<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/tracklist-demo.mp4" className="m-0 rounded" />
+<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/quick-filters.mp4" className="m-0 rounded" />
 
 
 You can also save your filters as presets and apply them to a tracklist at any time:
-<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/tracklist-demo.mp4" className="m-0 rounded" />
+<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/quick-filters-saved.mp4" className="m-0 rounded" />
 
 
 
 ### Audio Player
-I have also built the audio player using the HTML audio element with all necessary controls, and it works quite well: 
-<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/tracklist-demo.mp4" className="m-0 rounded" />
+I have also built the audio player using the HTML audio element with all necessary controls, and it works quite well:
+
+<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/audio-element.mp4" className="m-0 rounded" />
+
+The only downside is that it doesn't support .AIFF audio files. My current workaround is to convert these files to MP3 and send that as a blob for the element to play. This causes a significant amount of lag when playing a AIFF tracks — I'm looking for a way to solve this.
 
 
+While building the audio player, I learned about the [Media Session API](https://developer.mozilla.org/en-US/docs/Web/API/MediaSession) - a really cool API that lets you customize media playback and send track metadata to the host OS. With this API, we can display the currently playing track in the macOS title bar: 
 
-The only downside is that it doesn't support .AIFF files. My current workaround is to convert these files to MP3 and send that as a blob for the element to play. This causes some delay when playing an AIFF track—I'm looking for a way to solve this.
+<Image
+  src="/articles/cratebase-devlog-trying-out-content-driven-development/media-session.png"
+  width={1000}
+  height={720}
+/>
 
 
-## What I worked on Last Week
+## What I worked on last Week
 
 Last week, I mainly worked on the tracklist queue. When you play a track, there is now a little button by the title that opens a queue of tracks that will play next:
 
-<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/tracklist-demo.mp4" className="m-0 rounded" />
+<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/queue.mp4" className="m-0 rounded" />
 
 
 I considered whether making this a popover was the best choice. I wanted to implement it similarly to how the Music app on macOS works, where the queue opens as panel on the right. Let me know what you think.
 
-The most challenging aspect of implementing the queue was ensuring it worked properly with repeat and shuffle features. I also had to carefully consider how the "Play Next" right-click option would interact with these queue behaviors:
+The most challenging aspect of implementing the queue was ensuring it worked properly with repeat and shuffle features. I also had to carefully consider how the "Play Next" right-click option would interact with these queue behaviors.
 
-<video controls muted src="/articles/cratebase-devlog-trying-out-content-driven-development/tracklist-demo.mp4" className="m-0 rounded" />
 
 
 In the end, it came out really nice - I used MobX's reaction utility a lot to ensure my state was synced correctly. 
