--- a/content/articles/cratebase-devlog-trying-out-content-driven-development.mdx
+++ b/content/articles/cratebase-devlog-trying-out-content-driven-development.mdx
@@ -97,7 +97,7 @@ While building the audio player, I learned about the [Media Session API](https:/
 />
 
 
-## What I worked on last Week
+## What I worked on last week
 
 Last week, I mainly worked on the tracklist queue. When you play a track, there is now a little button by the title that opens a queue of tracks that will play next:
 
@@ -113,7 +113,7 @@ The most challenging aspect of implementing the queue was ensuring it worked pro
 In the end, it came out really nice - I used MobX's reaction utility a lot to ensure my state was synced correctly. 
 
 
-## What I'm working on this Week 
+## What I'm working on this week 
 This week I plan to work on the metadata features. I have three metadata features in mind:
 
 1. **Find metadata** - This service will let users search for track metadata using title and artist information. I'll likely integrate with an external service like [Discogs](https://www.discogs.com/) or [MusicBrainz](https://musicbrainz.org/) for the searches. I'm still brainstorming how the UI would look, especially when there are multiple search matches. For inspiration, I'm looking at how other apps like [OneTagger](https://onetagger.github.io/) handle this.
@@ -122,7 +122,7 @@ This week I plan to work on the metadata features. I have three metadata feature
 
 3. **Write Metadata to File** - This feature allows users to write the current metadata stored in the SQLite database to the audio files' ID3 tags.
 
-I think the find metadata feature will be the most complex to implement—but let's see how it goes.
+I think the find metadata feature will be the most complicated to implement—but let's see how it goes.
 
 I currently have a soft deadline to ship an MVP for this app by summer—hopefully writing about my progress will help me hit the deadline.
 
