--- a/content/articles/cratebase-devlog-trying-out-content-driven-development.mdx
+++ b/content/articles/cratebase-devlog-trying-out-content-driven-development.mdx
@@ -34,7 +34,7 @@ The Electron app is built with [Vite](https://vite.dev/) through a package calle
 
 I have a separate [Hono](https://hono.dev/) server with a PostgreSQL database that handles software updates, license management, and additional features that can't be handled locally—like track metadata searching. Both the server and database are currently deployed on [Render](https://render.com/).
 
-All the apps and packages live in a monorepo powered by Turborepo.
+All the apps and packages live in a monorepo powered by [Turborepo](https://turbo.build/repo/docs).
 
 ## Current Features
 
