--- a/content/articles/cratebase-devlog-trying-out-content-driven-development.mdx
+++ b/content/articles/cratebase-devlog-trying-out-content-driven-development.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Trying Out Content Driven Development"
+title: "Trying out Content Driven Development"
 publishedAt: "2025-3-17"
 description: "Trying Out Content Driven Development"
 tags: ["Electron", "React", "Side Projects"]
