fix: update OG image
Signed-off-by: Kolade Afode <87288429+KXLAA@users.noreply.github.com>

--- a/content/articles/working-with-value-classes-in-jdbi-and-spring-boot.mdx
+++ b/content/articles/working-with-value-classes-in-jdbi-and-spring-boot.mdx
@@ -2,9 +2,9 @@
 title: "Working with Value Classes in JDBI and Spring Boot"
 publishedAt: "2025-04-14"
 description: "How to map value classes to your database schema with JDBI"
-tags: ["Java", "Spring Boot", "BackEnd"]
+tags: ["Java", "Spring Boot", "Backend", "SQL"]
 articleType: "article"
-og: "https://ucarecdn.com/367c0ae2-68ac-4c14-9b19-973c66e81773/draganddropinreactwithdndkit.png"
+og: "https://ucarecdn.com/b1fad4b1-c60d-44e2-8f31-6870941991e5/workingwithvalueclassesinjdbiandspringboot.png"
 status: "published"
 ---
 
