fix: fix broken link : (
Signed-off-by: Kolade Afode <87288429+KXLAA@users.noreply.github.com>

--- a/content/articles/working-with-value-classes-in-jdbi-and-spring-boot.mdx
+++ b/content/articles/working-with-value-classes-in-jdbi-and-spring-boot.mdx
@@ -8,7 +8,7 @@ og: "https://ucarecdn.com/b1fad4b1-c60d-44e2-8f31-6870941991e5/workingwithvaluec
 status: "published"
 ---
 
-If you just want to see the completed demo for this, check out the repository [here]("https://github.com/KXLAA/jdbi-value-classes-demo").
+If you just want to see the completed demo for this, check out the repository [here](https://github.com/KXLAA/jdbi-value-classes-demo?tab=readme-ov-file).
 
 
 I've been playing around with Java and Spring Boot recently and ran into some serialization issues with JDBI when I tried to add value classes for UUIDs.
@@ -215,5 +215,5 @@ public Jdbi jdbi(DataSource ds) {
 }
 ```
 
-You can check out the repo for a full demo of how this all works together [here](https://github.com/KXLAA/jdbi-value-classes-demo).
+You can check out the repo for a full demo of how this all works together [here](https://github.com/KXLAA/jdbi-value-classes-demo?tab=readme-ov-file).
 
